src/test/deca/context/valid/hello-world.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello, world!
//
// Historique:
//    cree le 01/01/2025

{
        println("Hello, world!");
        // print(12.4);
}
