src/test/deca/context/invalid/read.deca
// Description:
//    Programme minimaliste utilisant les fonction de base read.
//
// Resultats:
// Error
//
// Historique:
//    cree le 06/01/2025

{   
   int x;
   float y;
   readInt(x);
   readFloat(y);

}